--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "siyuan-inbox-telegram-plugin",
   "version": "0.1.0",
   "type": "module",
-  "description": "This is a sample plugin based on vite and svelte for Siyuan (https://b3log.org/siyuan)",
-  "repository": "",
-  "homepage": "",
-  "author": "",
+  "description": "This plugin integrates Telegram with SiYuan (https://b3log.org/siyuan), allowing users to manage their Telegram messages directly within SiYuan using a Telegram bot. It supports creating daily notes, managing messages, and more",
+  "repository": "https://github.com/shady2k/siyuan-inbox-telegram-plugin",
+  "homepage": "https://github.com/shady2k/siyuan-inbox-telegram-plugin",
+  "author": "shady2k",
   "license": "MIT",
   "scripts": {
     "make-link": "node  --no-warnings ./scripts/make_dev_link.js",
